# zelos

./: .envrc  .gitignore  .ruff.toml  .treefmt.toml  .typos.toml  Cargo.toml  Justfile  LICENSE-MIT  README.md  flake.nix  go.mod
crates/zelos/: Cargo.toml  Justfile
crates/zelos-proto/: Cargo.toml  Justfile
crates/zelos-proto/proto/zeloscloud/trace/: publish.proto
crates/zelos-proto/src/: error.rs
crates/zelos-proto/src/trace/: from_into.rs  helpers.rs
crates/zelos-trace/: Cargo.toml  Justfile
crates/zelos-trace-grpc/: Cargo.toml  Justfile
crates/zelos-trace-grpc/benches/: grpc_publish_benchmark.rs
crates/zelos-trace-grpc/src/: connection_status.rs
crates/zelos-trace-grpc/src/publish/: client.rs  service.rs
crates/zelos-trace-grpc/src/subscribe/: client.rs  service.rs
crates/zelos-trace-types/: Cargo.toml  Justfile
crates/zelos-trace-types/src/: data_type.rs  ipc.rs  lib.rs  signal.rs  signal_key.rs  value.rs
crates/zelos-trace/src/: filter.rs  metadata.rs  router.rs  segment.rs  source.rs  store.rs  time.rs
crates/zelos/src/: lib.rs
examples/: README.md  all-types.rs  async-emit.rs  async-schema.rs  basic-stream.rs  binary-payload.rs  burst-stream.rs  custom-timestamps.rs  event-schema-and-values.rs  grpc-publish-config.rs  hello-world.rs  high-frequency.rs  multi-sources.rs  publish-status.rs  sensor-array.rs  state-machine.rs
go/: README.md  client.go  generate.sh  go.mod  go.sum  trace.go  types.go  types_test.go
go/examples/: hello-world.go
go/examples/all-types/: main.go
go/examples/async-emit/: main.go
go/examples/async-schema/: main.go
go/examples/basic-stream/: main.go
go/examples/binary-payload/: main.go
go/examples/burst-stream/: main.go
go/examples/custom-timestamps/: main.go
go/examples/event-schema-and-values/: main.go
go/examples/grpc-publish-config/: main.go
go/examples/hello-world/: main.go
go/examples/high-frequency/: main.go
go/examples/multi-sources/: main.go
go/examples/publish-status/: main.go
go/examples/sensor-array/: main.go
go/examples/state-machine/: main.go
go/proto/zeloscloud/trace/: publish.proto  subscribe.proto  trace.proto
go/zeloscloud/trace/: publish.pb.go  publish_grpc.pb.go  subscribe.pb.go  subscribe_grpc.pb.go  trace.pb.go
python/: README.md  pyproject.toml
python/examples/: all-types.py  async-emit.py  async-schema.py  basic-stream.py  binary-payload.py  burst-stream.py  custom-timestamps.py  event-schema-and-values.py  grpc-publish-config.py  hello-world.py  high-frequency.py  multi-sources.py  publish-status.py  sensor-array.py  state-machine.py
zelos/: Cargo.toml
zelos-proto/: build.rs
zelos-proto/proto/zeloscloud/trace/: trace.proto
zelos-proto/src/: lib.rs
zelos-proto/src/trace/: from_into.rs  mod.rs
zelos-trace/: Cargo.toml
zelos-trace-grpc/: Cargo.toml
zelos-trace-grpc/src/: lib.rs
zelos-trace-grpc/src/publish/: client.rs  mod.rs  service.rs
zelos-trace-grpc/src/subscribe/: client.rs  mod.rs  service.rs
zelos-trace-types/: Cargo.toml
zelos-trace-types/src/: data_type.rs  latest.rs  value.rs
zelos-trace/src/: lib.rs  metadata.rs  segment.rs  sink.rs  store.rs  time.rs
zelos/src/: lib.rs
