[workspace]
resolver = "2"
members = [
    "crates/zelos",
    "crates/zelos-proto",
    "crates/zelos-trace",
    "crates/zelos-trace-grpc",
    "crates/zelos-trace-types",
]

[workspace.dependencies]
# Internal crates
zelos-trace-types = { version = "0.0.1", path = "crates/zelos-trace-types" }
zelos-proto = { version = "0.0.1", path = "crates/zelos-proto" }
zelos-trace = { version = "0.0.1", path = "crates/zelos-trace" }
zelos-trace-grpc = { version = "0.0.1", path = "crates/zelos-trace-grpc" }
zelos = { version = "0.0.1", path = "crates/zelos" }

# Third Party Dependencies
anyhow = "1.0.86"
arc-swap = "1.7.1"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false }
clap = "4.5.14"
derive_more = "2.0.1"
divan = "0.1"
duckdb = "1.2.2"
flume = "0.11.1"
lazy-regex = "3.1.0"
metrics = "0.24.1"
parking_lot = "0.12.3"
prost = "0.13.0"
prost-build = "0.13.0"
protoc-bin-vendored = "3.1.0"
rpds = "1.1.1"
serde = "1.0.202"
serde-enum-str = "0.3"
serde_json = "1.0.117"
thiserror = "2.0.12"
tokio = { version = "1.39.1", features = ["rt-multi-thread", "signal", "macros"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.12"
tonic = "0.12.3"
tonic-build = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ts-rs = { version = "9.0.1", features = ["no-serde-warnings"] }
uuid = "1.8.0"

# Optional dependencies (defined directly in crates that need them)
datafusion = "47.0.0"


