[package]
name = "zelos-trace-types"
version = "0.0.1"
edition = "2024"
description = "Shared types and data structures for Zelos tracing system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeloscloud/zelos"
keywords = ["tracing", "types", "data-structures", "time-series", "visualization"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
flume = { workspace = true }
lazy-regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-enum-str = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

# Optional dependencies defined directly
datafusion = { version = "47.0.0", optional = true }
duckdb = { version = "1.2.2", optional = true, features = ["chrono"] }
ts-rs = { version = "9.0.1", optional = true, features = ["no-serde-warnings"] }

[features]
datafusion = ["dep:datafusion"]
duckdb = ["dep:duckdb"]
ts-rs = ["dep:ts-rs"]
